# juc

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/args/: Cargo.toml
crates/args/src/: lib.rs
crates/checking/: Cargo.toml
crates/checking/src/: base.rs  data.rs  lib.rs  syntax.rs
crates/compilation/: Cargo.toml
crates/compilation/src/: base.rs  caller.rs  data.rs  defaults.rs  lib.rs  linux.rs  scope.rs
crates/compilation/src/compilers/: base.rs  linux.rs  mod.rs
crates/logging/: Cargo.toml
crates/logging/src/: level.rs  lib.rs  log.rs  logger.rs
crates/objects/: Cargo.toml
crates/objects/src/: function.rs  lib.rs  params.rs  type_.rs  variable.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/strings/: Cargo.toml
crates/strings/src/: lib.rs  manager.rs  structured.rs
src/: main.rs  strings.json
src/junon/: args.rs  logger.rs  mod.rs  platform.rs
src/junon/compilation/: asm.rs  base.rs  caller.rs  data.rs  defaults.rs  linux.rs  mod.rs  scope.rs
src/junon/compilation/checking/: base.rs  data.rs  mod.rs  syntax.rs
src/junon/compilation/objects/: function.rs  mod.rs  params.rs  type_.rs  variable.rs
src/junon/compilation/parsing/: mod.rs  parser.rs  tokens.rs
tests/: arrays.ju  assembly.ju  calls.ju  conditions.ju  example.ju  expressions.ju  fibonacci.ju  loops.ju  medium.ju  operations.ju  run.sh  simple.ju  strings.ju  test.sh
tests/args/: args.ju  file.ju  test.sh
tests/array/: test.ju  test.sh  test_array
tests/calls/: test.ju  test.sh  test_calls
tests/comments/: test.ju  test.sh  test_comments
tests/compilation/: main.ju  test.sh
tests/compilation/check/: test.ju  test.sh  test2.ju  test_check2
tests/compilation/main/: test.ju  test_main
tests/compilation/vars/: test.ju  test_vars
tests/expr/: test.ju  test.sh  test_expr
tests/funcs/: test.ju  test.sh  test_funcs
tests/main_func/: test.ju  test.sh  test_main
tests/operators/: test.ju  test.sh  test_operators
tests/simple/: test.ju  test.sh  test_simple
tests/vars/: test.ju  test.sh  test_vars
