[package]
name = "juc"
authors = ["Junon", "Antonin Hérault <antonherault@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
jup = { git = "https://github.com/junon-corp/jup" }
rslog = { git = "https://github.com/antoninhrlt/rslog" }
args = { path = "crates/args/" }
compilation = { path = "crates/compilation/" }
objects = { path = "crates/objects/" }
