[package]
name = "compilation"
authors = ["Junon", "Antonin Hérault <antonherault@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
jup = { git = "https://github.com/junon-corp/jup" }
rslog = { git = "https://github.com/antoninhrlt/rslog" }
x64asm = { git = "https://github.com/antoninhrlt/x64asm" }
args = { path = "../args/" }
objects = { path = "../objects/" }
platform = { path = "../platform/" }
